--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@
     {% include header.html %}
 
     <!-- Banner -->
-    <section id="banner" class="major">
+    <section id="banner" class="major" style="height:90vh">
         <div class="inner">
             <header class="major">
                 <h1>{{ page.landing-title }}</h1>
