--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,3 +44,16 @@
 <script src="{{ " assets/js/util.js " | absolute_url }}"></script>
 <!--[if lte IE 8]><script src="{{ "assets/js/ie/respond.min.js" | absolute_url }}"></script><![endif]-->
 <script src="{{ " assets/js/main.js " | absolute_url }}"></script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.analytic_track }}"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', '{{ site.analytic_track }}');
+</script>
