--- a/_layouts/allposts.html
+++ b/_layouts/allposts.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <!--
     Forty by HTML5 UP
     html5up.net | @ajlkn
@@ -20,14 +20,18 @@
       <section id="one">
 	<div class="inner">
           {% for post in site.posts %}
-	  {% if post.title != 404 %}
-	  <header class="major">
-	    <h1>{{ post.title }}</h1>
-	  </header>
-	  {% if post.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ post.image }}" alt="" /></span>{% endif %}
-	  {% if post.date %}<p>{{ post.date }}</p>{% endif %}
-	  <p>{{ post.content }}</p>
-	  {% endif %}
+              {% if post.title != 404 %}
+              <header class="major">
+                <h1><a href="{{ post.url | relative_url  }}" class="link">{{ post.title }}</a></h1>
+              </header>
+
+              <!-- Cheaty way to display a description -->
+              <h3>&nbsp;&nbsp;&nbsp;&nbsp;{{ post.description }}</h3>
+              <hr>
+              <!-- {% if post.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ post.image }}" alt="" /></span>{% endif %}
+              {% if post.date %}<p>{{ post.date }}</p>{% endif %}
+              <p>{{ post.content }}</p> -->
+              {% endif %}
           {% endfor %}
 	</div>
       </section>
