--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,4 +6,7 @@
     <link rel="stylesheet" href="{{ "assets/css/main.css " | relative_url }}" />
     <!--[if lte IE 9]><link rel="stylesheet" href="{{ "assets/css/ie9.css" | relative_url }}" /><![endif]-->
     <!--[if lte IE 8]><link rel="stylesheet" href="{{ "assets/css/ie8.css" | relative_url }}" /><![endif]-->
+
+    <!-- Syntax highlight -->
+    <link rel="stylesheet" href="{{ "assets/css/vs.css " | relative_url }}" />
 </head>
