--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -1,3 +1,56 @@
+<!-- <section id="two">
+  <div class="inner">
+      <header class="major">
+          <h2>Projects</h2>
+      </header>
+  </div>
+</section>
+<section id="one" class="tiles">
+  {% for post in site.posts limit:site.tiles-count %}
+  {% if site.tiles-source == 'posts'%} {% if post.tag == 'projects'%}
+  <article>
+    <span class="image">
+      <img src="{{ post.image }}" alt="" />
+    </span>
+    <header class="major">
+      <h3><a href="{{ post.url  | relative_url }}" class="link">{{ post.title }}</a></h3>
+      <p>{{ post.description }}</p>
+    </header>
+  </article>
+  {% endif %}{% endif %}
+  {% endfor %}
+</section>
+
+<section id="two">
+  <div class="inner">
+      <header class="major">
+          <h2>Robotics</h2>
+      </header>
+  </div>
+</section>
+<section id="one" class="tiles">
+  {% for post in site.posts limit:site.tiles-count %}
+  {% if site.tiles-source == 'posts'%} {% if post.tag == 'frc'%}
+  <article>
+    <span class="image">
+      <img src="{{ post.image }}" alt="" />
+    </span>
+    <header class="major">
+      <h3><a href="{{ post.url  | relative_url }}" class="link">{{ post.title }}</a></h3>
+      <p>{{ post.description }}</p>
+    </header>
+  </article>
+  {% endif %}{% endif %}
+  {% endfor %}
+</section>
+
+<section id="two">
+  <div class="inner">
+      <header class="major">
+          <h2>Other</h2>
+      </header>
+  </div>
+</section> -->
 <section id="one" class="tiles">
   {% for post in site.posts limit:site.tiles-count %}
   {% if site.tiles-source == 'posts' %}
@@ -8,19 +61,6 @@
     <header class="major">
       <h3><a href="{{ post.url  | relative_url }}" class="link">{{ post.title }}</a></h3>
       <p>{{ post.description }}</p>
-    </header>
-  </article>
-  {% endif %}
-  {% endfor %}
-  {% for page in site.pages limit:site.tiles-count %}
-  {% if site.tiles-source == 'pages' and page.show_tile != false %}
-  <article>
-    <span class="image">
-      <img src="{{ page.image }}" alt="" />
-    </span>
-    <header class="major">
-      <h3><a href="{{ page.url | relative_url  }}" class="link">{{ page.title }}</a></h3>
-      <p>{{ page.description }}</p>
     </header>
   </article>
   {% endif %}
