--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@
                 <h1>{{ page.landing-title }}</h1>
             </header>
             <div class="content">
-                <p style="text-transform: uppercase;">{{ site.description }}</p>
+                <p >{{ site.description }}</p>
                 <!-- <ul class="actions">
                     <li><a href="#one" class="button next scrolly">Get Started</a></li>
                 </ul> -->
@@ -51,17 +51,13 @@
         {% include tiles.html %}
 
         <!-- Two -->
-        <section id="two">
+        <!-- <section id="two">
             <div class="inner">
-                <!-- <header class="major">
-                    <h2>Massa libero</h2>
-                </header>
-                <p>{{ content }}</p> -->
                 <ul class="actions">
                     <li><a href="all_posts.html" class="button next">View All</a></li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
     </div>
 
