--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -30,18 +30,18 @@
 
 // Palette.
 	$palette: (
-		bg:					#242943,
-		bg-alt:				#2a2f4a,
-		fg:					#ffffff,
-		fg-bold:			#ffffff,
+		bg:					#002b36,
+		bg-alt:				#073642,
+		fg:					#eee8d5,
+		fg-bold:			#fdf6e3,
 		fg-light:			rgba(244,244,255,0.2),
 		border:				rgba(212,212,255,0.1),
 		border-bg:			rgba(212,212,255,0.035),
-		highlight:			#9bf1ff,
-		accent1:			#6fc3df,
-		accent2:			#8d82c4,
-		accent3:			#ec8d81,
-		accent4:			#e7b788,
-		accent5:			#8ea9e8,
-		accent6:			#87c5a4
+		highlight:			#2aa198,
+		accent1:			#268bd2,
+		accent2:			#6c71c4,
+		accent3:			#268bd2,
+		accent4:			#6c71c4,
+		accent5:			#268bd2,
+		accent6:			#6c71c4
 	);
