--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 {% include head.html %}
 
 <body>
 
-    {% include header.html %} 
+	{% include header.html %} 
+	
+	<section id="banner" class="major" style="height:40vh">
+			<div class="inner">
+				<header class="major">
+					<h1>{{ page.title }}</h1>
+				</header>
+				<div class="content">
+						<p >{{ page.description }}</p>
+						
+					</div>
+			</div>
+		</section>
     
     
 <!-- Main -->
@@ -19,9 +26,6 @@
 <!-- One -->
 <section id="one">
 	<div class="inner">
-		<header class="major">
-			<h1>{{ page.title }}</h1>
-		</header>
 		{% if page.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></span>{% endif %}
 		<p>{{ content }}</p>
 	</div>
