--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -23,7 +23,7 @@
 		family:				('Source Sans Pro', Helvetica, sans-serif),
 		family-fixed:		('Courier New', monospace),
 		weight:				300,
-		weight-bold:		600,
+		weight-bold:		500,
 		letter-spacing:		0.025em,
 		letter-spacing-alt:	0.25em
 	);
@@ -38,10 +38,27 @@
 		border:				rgba(212,212,255,0.1),
 		border-bg:			rgba(212,212,255,0.035),
 		highlight:			#2aa198,
-		accent1:			#268bd2,
-		accent2:			#6c71c4,
-		accent3:			#268bd2,
-		accent4:			#6c71c4,
-		accent5:			#268bd2,
-		accent6:			#6c71c4
+		accent1:			#586e75,
+		accent2:			#657b83,
+		accent3:			#839496,
+		accent4:			#93a1a1,
+		accent5:			#657b83,
+		accent6:			#586e75
 	);
+
+	// $palette: (
+	// 	bg:					#fdf6e3,
+	// 	bg-alt:				#073642,
+	// 	fg:					#073642,
+	// 	fg-bold:			#002b36,
+	// 	fg-light:			rgba(244,244,255,0.2),
+	// 	border:				rgba(212,212,255,0.1),
+	// 	border-bg:			rgba(212,212,255,0.035),
+	// 	highlight:			#2aa198,
+	// 	accent1:			#586e75,
+	// 	accent2:			#657b83,
+	// 	accent3:			#839496,
+	// 	accent4:			#93a1a1,
+	// 	accent5:			#586e75,
+	// 	accent6:			#657b83
+	// );
