--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,6 +32,23 @@
                 </div>
             </section>
 
+            <section id="two">
+                    <div class="inner">
+                        <header class="major">
+                            <h3>Featured Projects</h3>
+                            <p>My favorite projects</p>
+                        </header>
+    
+                        <ul>
+                        {% for project in site.data.projects %}
+                            <li><h3><a href="{{ project.url | relative_url  }}" class="link" >{{ project.name }} {% if project.pi3d %} [PI3D] {% endif %}</a></h3></li>
+                        {% endfor %}
+                        </ul>
+    
+                    </div>
+                </section>
+
+
         <section id="two">
                 <div class="inner">
                     <header class="major">
