--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@
     <!-- Main -->
     <div id="main">
 
-        <section id="two">
+        <section id="two" style="background-color:#586e75">
                 <div class="inner">
                     <header class="major">
                         <h2>About Me</h2>
@@ -49,7 +49,7 @@
                 </section>
 
 
-        <section id="two">
+        <section id="two" style="background-color:#657b83">
                 <div class="inner">
                     <header class="major">
                         <h3>Blog</h3>
@@ -66,7 +66,6 @@
                 </div>
             </section>
 
-            <br><br>
     </div>
 
     
