--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
 <div id="wrapper">
 
     <!-- Header -->
-    <header id="header" {% if page.layout=="landing" %} class="alt style2" {% endif %}{% if page.layout=="home" %} class="alt" {% endif %}>
-        <a href="{{ " " | absolute_url }}/" class="logo"><strong>{{ site.title }}</strong> <span>{{ site.subtitle }}</span></a>
+    <header id="header" style="filter:blur" {% if page.layout=="landing" %} class="alt style2" {% endif %}{% if page.layout=="home" %} class="alt" {% endif %}>
+        <a href="{{site.baseurl}}/" class="logo"><strong>{{ site.title }}</strong> <span>{{ site.subtitle }}</span></a>
         <nav>
             <!-- <a href="#menu">Menu</a> -->
         </nav>
