--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,8 @@
     <div class="container">
         <span class="navbar-text">
             Site design by: <a href="https://retrylife.ca">Evan Pratten</a>
+            <br>
+            This site was last updated at: {{site.time}}
         </span>
     </div>
 </nav>
