--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,19 +5,10 @@
     <div class="site-ctr">
         <!-- Navbar -->
         {% include nav.html %}
-
-        <!-- Header -->
-        <div class="header" style="height:35%">
-            <div class="container">
-                <div class="content">
-                    <!-- <h1>About Me</h1> -->
-                </div>
-            </div>
-            <div class="header-gap"></div>
-        </div>
+        <div style="height:5vh"></div>
 
         <div class="reactive-bg">
-            <div class="post container" style="min-height:65vh">
+            <div class="post container" style="min-height:100vh">
                 <h1>About Me</h1>
                 <hr>
                 {{content}}
