--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,19 +5,16 @@
     <div class="site-ctr">
         <!-- Navbar -->
         {% include nav.html %}
+        <div style="height:5vh"></div>
 
         <!-- Header -->
-        <div class="header">
+        <!-- <div class="header">
             <div class="container">
                 <div class="content">
-                    <!-- <h1>{{page.title}}</h1>
-                    <h3>{{page.description}}</h3>
-                    <br>
-                    <p>{{page.date}}</p> -->
                 </div>
             </div>
             <div class="header-gap"></div>
-        </div>
+        </div> -->
 
         <div class="reactive-bg">
             <div class="post container">
@@ -27,7 +24,7 @@
                 <p><em>{{page.date}}</em></p>
 
                 <br>
-                
+
                 {{content}}
             </div>
         </div>
