--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -5,19 +5,19 @@
     <div class="site-ctr">
         <!-- Navbar -->
         {% include nav.html %}
+        <div style="height:5vh"></div>
 
         <!-- Header -->
-        <div class="header" style="height:35%">
+        <!-- <div class="header" style="height:35%">
             <div class="container">
                 <div class="content">
-                    <!-- <h1>My Projects</h1> -->
                 </div>
             </div>
             <div class="header-gap"></div>
-        </div>
+        </div> -->
 
         <div class="reactive-bg">
-            <div class="post container">
+            <div class="post container" style="min-height:100vh">
                 <h1>My Projects</h1>
                 <hr>
 
