--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -5,7 +5,7 @@
     <div class="site-ctr">
         <!-- Navbar -->
         {% include nav.html %}
-        <div style="height:5vh"></div>
+        <!-- <div style="height:5vh"></div> -->
 
         <!-- Header -->
         <!-- <div class="header" style="height:35%">
