--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,19 @@
-<nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-    <!-- Navbar content -->
-    <div class="container">
-        <span class="navbar-text">
-            Site design by: <a href="https://retrylife.ca">Evan Pratten</a>
-            <br>
-            This site was last updated at: {{site.time}}
-        </span>
-    </div>
-</nav>
+<div class="container">
+        <hr>
+</div>
+    <nav class="navbar  navbar-expand-lg ">
+
+        <!-- Navbar content -->
+        <div class="container">
+            
+            <span class="navbar-text">
+                Site design by: <a href="https://retrylife.ca">Evan Pratten</a> |
+                
+                This site was last updated at: {{site.time}}
+            </span>
+        </div>
+    </nav>
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -18,4 +24,3 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-
