--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,7 +5,7 @@
     <div class="site-ctr">
         <!-- Navbar -->
         {% include nav.html %}
-        <div style="height:5vh"></div>
+        <!-- <div style="height:5vh"></div> -->
 
         <div class="reactive-bg">
             <div class="post container" style="min-height:100vh">
