--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,3 +46,13 @@
 
     })(jQuery, window);
 </script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{site.ga_analytics}}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', '{{site.ga_analytics}}');
+</script>
