HAHA. I shouldn't be allowed to touch configs

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,9 +50,18 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id={{site.ga_analytics}}"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', '{{site.ga_analytics}}');
+    gtag('config', '{{site.ga_analytics}}');
+</script>
+
+
+<!-- particles -->
+<script src="/assets/js/particles.min.js"></script>
+<script>
+    particlesJS.load('particles-js', '/assets/js/particles.json', function () {
+        console.log('callback - particles.js config loaded');
+    });
 </script>
