--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,10 +18,18 @@
 
         <div class="reactive-bg">
             <div class="post container">
-                <h1>{{page.title}}</h1>
-                <h4>{{page.description}}</h4>
+                <h1>{{page.title}}
+
+                </h1>
+                <h4>{{page.description}}
+
+                </h4>
                 <hr>
-                <p><em>{{page.date}}</em></p>
+                <p><em>{{page.date}}
+                        {% if page.is_short %}
+                        <span class="badge badge-secondary">Mini Post</span>
+                        {% endif %}
+                    </em></p>
 
                 <br>
 
@@ -31,5 +39,6 @@
 
     </div>
     {% include footer.html %}
+    
 
 </body>
