--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -15,31 +15,51 @@
             </div>
             <div class="header-gap"></div>
         </div> -->
-        
+
         <div class="reactive-bg">
-            <div class="post container" >
+            <div class="post container">
                 <h1>Blog Posts</h1>
                 <hr>
 
-                {% assign i = 0 %}
-                {% for post in site.posts %}
-
-                {% if i == 0 %}
-                <div class="post-preview">
-                    <div class="card">
-                        <div class="card-header">
-                            Featured Post
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">{{post.title}}</h5>
-                            <p class="card-text">{{post.description}}</p>
-                            <a href="{{post.url}}" class="btn btn-primary">View</a>
-                        </div>
-                    </div>
-                </div>
-                <div style="height:50px"></div>
                 <div class="list-group" id="posts">
-                    <a href="#posts" class="list-group-item list-group-item-action list-group-item-dark">Other Posts</a>
+                    <a href="#posts" class="list-group-item list-group-item-action list-group-item-dark">Featured
+                        Post</a>
+
+                    {% assign i = 0 %}
+                    {% for post in site.posts %}
+
+                    {% if i == 0 %}
+                    <!-- <div class="post-preview">
+                        <div class="card">
+                            <div class="card-header">
+                                Featured Post
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">{{post.title}}
+                                    {% if post.is_short %}
+                                    <span class="badge badge-secondary">Mini Post</span>
+                                    {% endif %}
+                                </h5>
+                                <p class="card-text">{{post.description}}</p>
+                                <a href="{{post.url}}" class="btn btn-primary">View</a>
+                            </div>
+                        </div>
+                    </div> -->
+
+                    <a href="{{post.url}}" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <div class="card-body">
+                                <h5 class="mb-1">{{post.title}}
+                                    {% if post.is_short %}
+                                    <span class="badge badge-secondary">Mini Post</span>
+                                    {% endif %}
+                                </h5>
+                                <p class="card-text">{{post.description}}</p>
+                            </div>
+                        </div>
+                    </a>
+
+
                     {% else %}
 
 
@@ -58,6 +78,7 @@
             </div>
         </div>
     </div>
+    
     {% include footer.html %}
 
 
