--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -83,3 +83,6 @@
         console.log('callback - particles.js config loaded');
     });
 </script>
+
+<!-- Twitter embeds -->
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
