--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -18,7 +18,7 @@
 
         <div class="reactive-bg">
             <div class="post container">
-                <h1>Blog Posts</h1>
+                <h1>Blog Posts & Other Stuff</h1>
                 <hr>
 
                 <div class="list-group" id="posts">
