Fixed webdocs link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -86,3 +86,6 @@
 
 <!-- Twitter embeds -->
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+
+<!-- Roughviz -->
+<script src="https://unpkg.com/rough-viz@1.0.5"></script>
