--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,6 +47,17 @@
                             Java, and C.<br>
                             I am working on learning a few new languages, including Ruby at the moment.</p>
 
+                        <!-- <br><br>
+                        <h2>Blog</h2>
+
+                        <p>
+                            I write things ocasionally. If you are interested in my projects and ideas, check out my blog
+                        </p>
+
+                        <a href="{{site.baseurl}}/blog">
+                            <button type="button" class="btn btn-success">View Page</button>
+                        </a> -->
+
                         <br><br>
                         <h2>Projects</h2>
 
