quiet push music section

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,6 +10,7 @@
         <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link" href="{{site.baseurl}}/blog">Blog</a>
             <a class="nav-item nav-link" href="{{site.baseurl}}/projects">Projects</a>
+            <!-- <a class="nav-item nav-link" href="{{site.baseurl}}/music">Music</a> -->
             <!-- <a class="nav-item nav-link" href="{{site.baseurl}}/documentation">Documentation</a> -->
             <a class="nav-item nav-link" href="{{site.baseurl}}/about">About</a>
         </div>
