Add instagram to socials

--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -22,7 +22,7 @@
                 <hr>
 
                 <div class="list-group" id="posts">
-                    <a href="#posts" class="list-group-item list-group-item-action list-group-item-dark">Featured
+                    <a href="#posts" class="feature list-group-item list-group-item-action list-group-item-dark ">Featured
                         Post</a>
 
                     {% assign i = 0 %}
