--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,8 @@ body {
 }
 
 table {
-    width: 100%;
+    width: max-content;
+    max-width: 100%;
     margin-bottom: 1rem;
     color: #212529;
     vertical-align: top;
