Changed up website design

--- a/_includes/advert.html
+++ b/_includes/advert.html
@@ -13,7 +13,7 @@
     adverts = [
         'Want to waste away your period 4 english class by playing games? Check out <a href="https://rsninja.dev">rsninja.dev</a>',
         'Is dark mode too cheery? Check out <a href="https://exvacuum.dev">exvacuum.dev</a>',
-        '{Advertisement text here} <a href="https://hyperlisk.dev">hyperlisk.dev</a>'
+        // '{Advertisement text here} <a href="https://hyperlisk.dev">hyperlisk.dev</a>'
     ]
 
     // Display random advert
