--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -16,6 +16,18 @@
         </div>
 
     </div>
+    <br>
+
+    <div class="reactive-bg">
+        <div class="post container" id="advert">
+            <span >
+                Site design by: <a href="https://retrylife.ca">Evan Pratten</a> |
+        
+                This site was last updated at: {{site.time}}
+            </span>
+        </div>
+    </div>
+
     {% include footer.html %}
 
 
