--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,13 +7,15 @@
         {% include nav.html %}
 
         <!-- Header -->
-        <div class="header" style="height:30vh">
+        <div class="header container" style="height:30vh">
             <div class="home-header">
             </div>
         </div>
 
         <div class="reactive-bg">
             <div class="home container">
+
+
                 <div class="profile">
                     <img src="{{site.baseurl}}/assets/images/human-profile.jpg">
                 </div>
