--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,19 +1,21 @@
 <nav class="navbar navbar-dark sticky-top bg-dark navbar-expand-lg">
     <!-- Navbar content -->
-    <!-- <div class="container"> -->
-    <a class="navbar-brand" href="{{site.baseurl}}/">{{site.title}}</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link" href="{{site.baseurl}}/blog">Blog</a>
-            <a class="nav-item nav-link" href="{{site.baseurl}}/projects">Projects</a>
-            <!-- <a class="nav-item nav-link" href="{{site.baseurl}}/music">Music</a> -->
-            <!-- <a class="nav-item nav-link" href="{{site.baseurl}}/documentation">Documentation</a> -->
-            <a class="nav-item nav-link" href="{{site.baseurl}}/about">About</a>
+    <div class="container">
+        <a class="navbar-brand" href="{{site.baseurl}}/"><span>{{site.title}}</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ml-auto">
+                <a class="nav-item nav-link" href="{{site.baseurl}}/blog">Blog</a>
+                <a class="nav-item nav-link" href="{{site.baseurl}}/projects">Projects</a>
+                <!-- <a class="nav-item nav-link" href="{{site.baseurl}}/music">Music</a> -->
+                <!-- <a class="nav-item nav-link" href="{{site.baseurl}}/documentation">Documentation</a> -->
+                <a class="nav-item nav-link" href="{{site.baseurl}}/about">About</a>
+            </div>
         </div>
-        <!-- </div> -->
     </div>
 </nav>
+
+<br>
