--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     font-family: 'IBM Plex Mono', monospace;
     font-family: 'IBM Plex Sans', sans-serif;
+    background-color: #343a40;
 }
 
 .foot {}
@@ -19,11 +20,16 @@ body {
 
 .header {
     height: 35vh;
+    /* max-width: 1140px; */
+    margin: auto;
     background-color: #ebeef1;
     background-image: url('/assets/images/banner.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    overflow: hidden;
+    border-top-right-radius: 7px;
+    border-top-left-radius: 7px;
 }
 
 .table-fix {
@@ -91,22 +97,42 @@ a h5 {
 .post.container {
     padding: 20px;
     font-family: 'IBM Plex Sans', sans-serif;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    /* border-radius: 15px;
-    transform: translateY(-30px); */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
+    /* transform: translateY(-30px); */
     background-color: #fff;
 }
 
-#advert{
+#advert {
     /* background-color: #343a40; */
     /* color:#fff; */
-    text-align:center;
-    /* padding:5; */
+    text-align: center;
+    padding: 10;
+    font-size: medium;
 }
 
-#advert p{
-    padding:0;
-    margin:0;
+#advert p {
+    padding: 0;
+    margin: 0;
+}
+
+.nav-item.nav-link {
+    padding-top: .4125rem;
+    padding-bottom: .3125rem;
+    line-height: inherit;
+}
+
+.navbar-brand span {
+    background-color: #fff;
+    color: #343a40;
+    font-weight: bolder;
+    padding-left: 5;
+    padding-right: 5;
+}
+
+.navbar-brand {
+    margin-right: 0;
+    color: #343a40;
 }
 
 .home.container {
@@ -114,6 +140,8 @@ a h5 {
     font-family: 'Noto Sans TC', sans-serif;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background-color: #fff;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 
 .container .profile {
@@ -209,29 +237,30 @@ blockquote p {
 }
 
 kbd {
-	margin: 0px 0.1em;
-	padding: 0.1em 0.6em;
-	border-radius: 3px;
-	border: 1px solid rgb(204, 204, 204);
-	color: rgb(51, 51, 51);
-	line-height: 1.4;
-	font-size: 10px;
-	display: inline-block;
-	box-shadow: 0px 1px 0px rgba(0,0,0,0.2), inset 0px 0px 0px 2px #ffffff;
-	background-color: rgb(247, 247, 247);
-	-moz-box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2), 0 0 0 2px #ffffff inset;
-	-webkit-box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2), 0 0 0 2px #ffffff inset;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	text-shadow: 0 1px 0 #fff;
+    margin: 0px 0.1em;
+    padding: 0.1em 0.6em;
+    border-radius: 3px;
+    border: 1px solid rgb(204, 204, 204);
+    color: rgb(51, 51, 51);
+    line-height: 1.4;
+    font-size: 10px;
+    display: inline-block;
+    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2), inset 0px 0px 0px 2px #ffffff;
+    background-color: rgb(247, 247, 247);
+    -moz-box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2), 0 0 0 2px #ffffff inset;
+    -webkit-box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2), 0 0 0 2px #ffffff inset;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    text-shadow: 0 1px 0 #fff;
 }
 
 .highlight {
     background-color: #faf9f9;
-    border-radius:5px;
+    border-radius: 5px;
 }
 
 pre {
-    padding:3px;
+    padding: 3px;
 }
+
 }
