--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -18,11 +18,12 @@
 
         <div class="reactive-bg">
             <div class="post container">
-                <h1>Blog Posts & Other Stuff</h1>
+                <h1>Posts</h1>
                 <hr>
 
                 <div class="list-group" id="posts">
-                    <a href="#posts" class="feature list-group-item list-group-item-action list-group-item-dark ">Featured
+                    <a href="#posts"
+                        class="feature list-group-item list-group-item-action list-group-item-dark ">Featured
                         Post</a>
 
                     {% assign i = 0 %}
@@ -78,7 +79,7 @@
             </div>
         </div>
     </div>
-    
+
     {% include footer.html %}
 
 
