--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,8 +6,24 @@
         <!-- Navbar -->
         {% include nav.html %}
 
+        <div class="landing container">
+
+            <div style="height:15vh;"></div>
+            <img id="face-backdrop" src="/assets/images/face-backdrop.png">
+
+            <div style="height:20vh;"></div>
+            <div class="nudge-right">
+                <h1 id="name-landing">Evan Pratten</h1>
+                <h3 id="me-landing">Programmer</h3>
+            </div>
+
+        </div>
+        <div class="landing-more container">
+            <h5><a href="/blog">Blog</a> <a href="/projects">Projects</a> <a href="#main-start">More</a></h5>
+        </div>
+
         <!-- Header -->
-        <div class="header container" style="height:30vh">
+        <div class="header container" style="height:30vh" id="main-start">
             <div class="home-header">
             </div>
         </div>
@@ -48,7 +64,7 @@
                             Since then, I have picked up many other languages, and am currently mainly using Python,
                             Java, and C.<br>
                             I am working on learning a few new languages, including Ruby at the moment.</p>
-                        
+
 
                         <br><br>
                         <h2>Projects</h2>
